--- a/SLWModLoader/SLWModLoader.csproj
+++ b/SLWModLoader/SLWModLoader.csproj
@@ -39,6 +39,9 @@
   <PropertyGroup>
     <StartupObject>SLWModLoader.Program</StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -58,31 +61,49 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\NewUpdateFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="src\NewUpdateFrm.Designer.cs">
+      <DependentUpon>NewUpdateFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="src\AboutFrm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="src\AboutFrm.Designer.cs">
       <DependentUpon>AboutFrm.cs</DependentUpon>
     </Compile>
-    <Compile Include="src\Mainfrm.cs">
+    <Compile Include="src\DescriptionFrm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="src\Mainfrm.Designer.cs">
-      <DependentUpon>Mainfrm.cs</DependentUpon>
+    <Compile Include="src\DescriptionFrm.Designer.cs">
+      <DependentUpon>DescriptionFrm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="src\MainFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="src\MainFrm.Designer.cs">
+      <DependentUpon>MainFrm.cs</DependentUpon>
     </Compile>
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\Updatefrm.cs">
+    <Compile Include="src\UpdateFrm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="src\Updatefrm.Designer.cs">
-      <DependentUpon>Updatefrm.cs</DependentUpon>
+    <Compile Include="src\UpdateFrm.Designer.cs">
+      <DependentUpon>UpdateFrm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="src\NewUpdateFrm.resx">
+      <DependentUpon>NewUpdateFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="src\AboutFrm.resx">
       <DependentUpon>AboutFrm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="src\Mainfrm.resx">
-      <DependentUpon>Mainfrm.cs</DependentUpon>
+    <EmbeddedResource Include="src\DescriptionFrm.resx">
+      <DependentUpon>DescriptionFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="src\MainFrm.resx">
+      <DependentUpon>MainFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -94,8 +115,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="src\Updatefrm.resx">
-      <DependentUpon>Updatefrm.cs</DependentUpon>
+    <EmbeddedResource Include="src\UpdateFrm.resx">
+      <DependentUpon>UpdateFrm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="cpkredir.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -129,6 +150,11 @@
     <None Include="DllInjector32.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="icon.ico" />
+    <None Include="icon96.png" />
+    <None Include="icon32.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
