Added IniFile class. Still not really safe, but it's usable enough.

--- a/SLWModLoader/SLWModLoader.csproj
+++ b/SLWModLoader/SLWModLoader.csproj
@@ -58,6 +58,7 @@
     <Compile Include="src\descriptionFrm.Designer.cs">
       <DependentUpon>descriptionFrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="src\IniFile.cs" />
     <Compile Include="src\newModFrm.cs">
       <SubType>Form</SubType>
     </Compile>
