--- a/SLWModLoader/SLWModLoader.csproj
+++ b/SLWModLoader/SLWModLoader.csproj
@@ -186,7 +186,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="src\update.bat" />
+    <None Include="res\update.bat" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
