--- a/SLWModLoader/SLWModLoader.csproj
+++ b/SLWModLoader/SLWModLoader.csproj
@@ -186,6 +186,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="res\patches\sonicgenerations\Disable Blue Trail.bin" />
+    <None Include="res\patches\sonicgenerations\Disable FxPipeline.bin" />
+    <None Include="res\patches\sonicgenerations\Enable Blue Trail.bin" />
+    <None Include="res\patches\sonicgenerations\Enable FxPipeline.bin" />
     <None Include="res\update.bat" />
   </ItemGroup>
   <ItemGroup>
