--- a/SLWModLoader/SLWModLoader.csproj
+++ b/SLWModLoader/SLWModLoader.csproj
@@ -125,6 +125,12 @@
     </Compile>
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\SLWSaveForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="src\SLWSaveForm.Designer.cs">
+      <DependentUpon>SLWSaveForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="src\UpdateForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -171,6 +177,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="src\NewModPropertyForm.resx">
       <DependentUpon>NewModPropertyForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="src\SLWSaveForm.resx">
+      <DependentUpon>SLWSaveForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="src\UpdateForm.resx">
       <DependentUpon>UpdateForm.cs</DependentUpon>
