--- a/SLWModLoader/SLWModLoader.csproj
+++ b/SLWModLoader/SLWModLoader.csproj
@@ -85,6 +85,12 @@
       <DependentUpon>CreateUpdateURLForm.cs</DependentUpon>
     </Compile>
     <Compile Include="src\DownloadTools.cs" />
+    <Compile Include="src\InstallForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="src\InstallForm.Designer.cs">
+      <DependentUpon>InstallForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="src\LogFile.cs" />
     <Compile Include="src\AboutForm.cs">
       <SubType>Form</SubType>
@@ -145,6 +151,8 @@
     <Compile Include="src\SLWSaveForm.Designer.cs">
       <DependentUpon>SLWSaveForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="src\Steam.cs" />
+    <Compile Include="src\Theme.cs" />
     <Compile Include="src\UpdateForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -178,6 +186,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="src\DescriptionForm.resx">
       <DependentUpon>DescriptionForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="src\InstallForm.resx">
+      <DependentUpon>InstallForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="src\NewModForm.resx">
       <DependentUpon>NewModForm.cs</DependentUpon>
