--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,8 @@
 version: '6.0-beta-5_r{build}'
 
 image: Visual Studio 2017
-configuration: Release
+# configuration: Release
+configuration: Debug
 platform: Any CPU
 
 build:
@@ -9,6 +10,7 @@ build:
   verbosity: minimal
   
 artifacts:
- - path: 'HedgeModManager\bin\Release'
+ # - path: 'HedgeModManager\bin\Release'
+ - path: 'HedgeModManager\bin\Debug'
    name: '$(appveyor_project_name) $(appveyor_build_version)'
    type: zip
