--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,13 @@
 version: '6.0-beta-5_r{build}'
 
-image: Visual Studio 2017
-# configuration: Release
-configuration: Debug
-platform: Any CPU
+environment:
+  matrix:
+    - appveyor_build_worker_image: Visual Studio 2017
+      configuration: Debug
+      platform: Any CPU
+    - appveyor_build_worker_image: Visual Studio 2017
+      configuration: Release
+      platform: Any CPU
 
 build:
   project: HedgeModManager.sln
