--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,10 @@ build:
   verbosity: minimal
   
 artifacts:
- # - path: 'HedgeModManager\bin\Release'
  - path: 'HedgeModManager\bin\Debug'
-   name: '$(appveyor_project_name) $(appveyor_build_version)'
+   name: '$(appveyor_project_name) $(appveyor_build_version) - Debug'
    type: zip
+ - path: 'HedgeModManager\bin\Release'
+   name: '$(appveyor_project_name) $(appveyor_build_version) - Release'
+   type: zip
+   
