--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,12 +8,6 @@ environment:
     - appveyor_build_worker_image: Visual Studio 2017
       configuration: Release
       platform: Any CPU
-    - appveyor_build_worker_image: Visual Studio 2017
-      configuration: Debug
-      platform: x64
-    - appveyor_build_worker_image: Visual Studio 2017
-      configuration: Release
-      platform: x64
 
 build:
   project: HedgeModManager.sln
@@ -21,15 +15,9 @@ build:
   
 artifacts:
  - path: 'HedgeModManager\bin\Debug'
-   name: '$(appveyor_project_name) $(appveyor_build_version) [Debug x86]'
+   name: '$(appveyor_project_name) $(appveyor_build_version) [Debug]'
    type: zip
  - path: 'HedgeModManager\bin\Release'
-   name: '$(appveyor_project_name) $(appveyor_build_version) [Release x86]'
-   type: zip
- - path: 'HedgeModManager\bin\x64\Debug'
-   name: '$(appveyor_project_name) $(appveyor_build_version) [Debug x64]'
-   type: zip
- - path: 'HedgeModManager\bin\x64\Release'
-   name: '$(appveyor_project_name) $(appveyor_build_version) [Release x64]'
+   name: '$(appveyor_project_name) $(appveyor_build_version) [Release]'
    type: zip
    
